# nps-browser

./: README.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt
android/app/src/main/cpp/pkg2zip_src/: pkg2zip.c  pkg2zip_aes.c  pkg2zip_crc32.c  pkg2zip_sys.c  pkg2zip_sys.h
android/app/src/main/kotlin/com/npsbrowser/nps_browser/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/models/: psp_game.dart
lib/screens/: downloads_screen.dart  game_details_screen.dart  home_screen.dart  settings_screen.dart
lib/services/: background_download_service.dart  cover_art_service.dart  decryption_service.dart  download_manager.dart  game_description_service.dart  nps_api_service.dart
lib/widgets/: game_card.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
